# fuckmonitor

./: README.md  install  meson.build  meson_options.txt  uninstall
src/: argos.c  cpu.c  debug.h  delay.c  fuckmonitor.h  inutility.h  main.c  memory.c  net.c  power.c  string.c
